--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,13 +1,12 @@
-monitor = DP-1, 3840x2160, 0x0, 1.5
-monitor = eDP-1, disable # 1920x1200, 0x0, 1.00
+monitor = DP-1, 3840x2160, 0x0, 1.8
+monitor = eDP-1, disable #1920x1200, 0x0, 1.3
 
 exec-once = pipewire
 exec-once = fcitx5
 exec-once = /usr/libexec/xdg-desk-portal-gtk
 exec-once = wl-paste -t text -w clipman store --no-persist
 exec-once = tail -f ~/.local/share/wobpipe | wob
-exec-once = swayidle timeout 300 'swaylock -f ; hyprctl dispatch dpms off ; pactl set-sink-volume @DEFAULT_SINK@ 0%'
-# exec-once = swaybg -i ~/pictures/others/wallpaper/void_linux_mini_green.jpg
+# exec-once = swayidle timeout 300 'pactl set-sink-volume @DEFAULT_SINK@ 0% ; waylock -fork-on-lock ; hyprctl dispatch dpms off'
 
 input {
     repeat_rate = 60
@@ -35,7 +34,7 @@ animations {
 
 misc {
     animate_manual_resizes = true
-    mouse_move_enables_dpms = true
+    # mouse_move_enables_dpms = true
     key_press_enables_dpms = true
 
     disable_hyprland_logo = true
@@ -52,13 +51,12 @@ debug {
 $mod = SUPER
 
 bind = $mod, RETURN, exec, wezterm
-bind = $mod, B, exec, vivaldi-stable --ozone-platform-hint=auto --enable-wayland-ime
-bind = $mod CTRL, B, exec, flatpak run io.gitlab.librewolf-community
+bind = $mod, B, exec, flatpak run io.gitlab.librewolf-community
 bind = $mod, SPACE, exec, wofi --show run
 bind = $mod, V, exec, clipman pick -t wofi
 bind = $mod, S, exec, grimshot save area ~/pictures/screenshots/$(date "+%Y-%m-%d_%H:%M:%S")'.png'
 bind = $mod, P, exec, hyprpicker -a
-bind = $mod, R, exec, swaylock -f ; hyprctl dispatch dpms off ; pactl set-sink-volume @DEFAULT_SINK@ 0%
+bind = $mod, R, exec, pactl set-sink-volume @DEFAULT_SINK@ 0% ; waylock -fork-on-lock ; hyprctl dispatch dpms off
 bind = $mod, N, exec, makoctl dismiss
 bind = $mod SHIFT, N, exec, makoctl invoke
 bind = $mod SHIFT, B, exec, cat /sys/class/power_supply/BAT0/capacity > ~/.local/share/wobpipe
@@ -85,10 +83,10 @@ bind = $mod SHIFT, H, swapwindow, l
 bind = $mod SHIFT, J, swapwindow, d
 bind = $mod SHIFT, K, swapwindow, u
 bind = $mod SHIFT, L, swapwindow, r
-bind = $mod CTRL, H, resizeactive, -100 0
-bind = $mod CTRL, J, resizeactive, 0 100
-bind = $mod CTRL, K, resizeactive, 0 -100
-bind = $mod CTRL, L, resizeactive, 100 0
+bind = $mod CTRL, H, resizeactive, -80 0
+bind = $mod CTRL, J, resizeactive, 0 80
+bind = $mod CTRL, K, resizeactive, 0 -80
+bind = $mod CTRL, L, resizeactive, 80 0
 
 bind = CTRL SHIFT, H, workspace, -1
 bind = CTRL SHIFT, L, workspace, +1
