--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,9 +1,8 @@
-monitor = DP-1, 3840x2160, 0x0, 1.7
+monitor = DP-1, 3840x2160, 0x0, 1.8
 monitor = eDP-1, disable#1920x1200, 0x0, 1.4
 
 exec-once = pipewire
 exec-once = fcitx5
-exec-once = /usr/libexec/xdg-desk-portal-gtk
 exec-once = wl-paste -t text -w clipman store --no-persist
 exec-once = tail -f ~/.local/share/wobpipe | wob
 # exec-once = swayidle timeout 300 'pactl set-sink-volume @DEFAULT_SINK@ 0% ; waylock -fork-on-lock ; hyprctl dispatch dpms off'
@@ -17,19 +16,19 @@ general {
 }
 
 input {
-    repeat_rate = 60
-    repeat_delay = 200
+    repeat_rate = 100
+    repeat_delay = 180
     follow_mouse = 1
     sensitivity = -0.2
 }
 
 animations {
-    # enabled = no
+    #enabled = no
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 2, myBezier
+    animation = windows, 1, 1.8, myBezier
     animation = windowsOut, 1, 2, default, slide
     animation = fade, 1, 1, default
-    animation = workspaces, 1, 1.4, default
+    animation = workspaces, 1, 1.2, default
 }
 
 misc {
@@ -46,8 +45,8 @@ debug {
 $mod = SUPER
 
 bind = $mod, RETURN, exec, wezterm
-bind = $mod, B, exec, flatpak run io.gitlab.librewolf-community
-bind = $mod, SPACE, exec, wofi --show run
+bind = $mod, B, exec, firefox
+# bind = $mod, SPACE, exec, wofi --show run
 bind = $mod, V, exec, clipman pick -t wofi
 bind = $mod, S, exec, grimshot save area ~/pictures/screenshots/$(date "+%Y-%m-%d_%H:%M:%S")'.png'
 bind = $mod, P, exec, hyprpicker -a
@@ -87,9 +86,3 @@ bind = CTRL SHIFT, H, workspace, -1
 bind = CTRL SHIFT, L, workspace, +1
 bind = $mod CTRL SHIFT, H, movetoworkspace, -1
 bind = $mod CTRL SHIFT, L, movetoworkspace, +1
-bind = $mod, 1, workspace, 1
-bind = $mod, 2, workspace, 2
-bind = $mod, 3, workspace, 3
-bind = $mod, 4, workspace, 4
-bind = $mod, 5, workspace, 5
-bind = $mod, 6, workspace, 6
