--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 monitor = DP-1, 3840x2160, 0x0, 1.8
-monitor = eDP-1, disable#1920x1200, 0x0, 1.4
+monitor = eDP-1, disable#1920x1200, 0x0, 1.3
 
 exec-once = pipewire
 exec-once = fcitx5
@@ -23,12 +23,12 @@ input {
 }
 
 animations {
-    #enabled = no
+    enabled = no
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 1.8, myBezier
+    animation = windows, 1, 2, myBezier
     animation = windowsOut, 1, 2, default, slide
     animation = fade, 1, 1, default
-    animation = workspaces, 1, 1.2, default
+    animation = workspaces, 1, 1.4, default
 }
 
 misc {
@@ -49,25 +49,24 @@ bind = $mod, B, exec, firefox
 # bind = $mod, SPACE, exec, wofi --show run
 bind = $mod, V, exec, clipman pick -t wofi
 bind = $mod, S, exec, grimshot save area ~/pictures/screenshots/$(date "+%Y-%m-%d_%H:%M:%S")'.png'
-bind = $mod, P, exec, hyprpicker -a
-bind = $mod, R, exec, pactl set-sink-volume @DEFAULT_SINK@ 0% ; waylock -fork-on-lock ; hyprctl dispatch dpms off
-bind = $mod, N, exec, makoctl dismiss
-bind = $mod SHIFT, N, exec, makoctl invoke
+bind = $mod, C, exec, hyprpicker -a
+bind = $mod, W, exec, pactl set-sink-volume @DEFAULT_SINK@ 0% ; waylock -fork-on-lock ; hyprctl dispatch dpms off
+bind = $mod, M, exec, makoctl dismiss
+bind = $mod SHIFT, M, exec, makoctl invoke
 bind = $mod SHIFT, B, exec, cat /sys/class/power_supply/BAT0/capacity > ~/.local/share/wobpipe
 
-bind = $mod, I, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% ; pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > ~/.local/share/wobpipe
-bind = $mod, O, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% ; pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > ~/.local/share/wobpipe
-bind = $mod, E, exec, pactl set-sink-volume @DEFAULT_SINK@ 0% ; pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > ~/.local/share/wobpipe
-bind = $mod SHIFT, I, exec, cat /sys/class/backlight/amdgpu_bl0/brightness | awk '{print $1 + 10}' > /sys/class/backlight/amdgpu_bl0/brightness
-bind = $mod SHIFT, O, exec, cat /sys/class/backlight/amdgpu_bl0/brightness | awk '{print $1 - 10}' > /sys/class/backlight/amdgpu_bl0/brightness
-bind = $mod CTRL, I, exec, ddcutil setvcp 10 + 5
-bind = $mod CTRL, O, exec, ddcutil setvcp 10 - 5
-bind = $mod CTRL SHIFT, I, exec, ddcutil setvcp 12 + 5
-bind = $mod CTRL SHIFT, O, exec, ddcutil setvcp 12 - 5
+bind = $mod, R, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% ; pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > ~/.local/share/wobpipe
+bind = $mod, N, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% ; pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > ~/.local/share/wobpipe
+bind = $mod, P, exec, pactl set-sink-volume @DEFAULT_SINK@ 0% ; pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > ~/.local/share/wobpipe
+bind = $mod SHIFT, R, exec, cat /sys/class/backlight/amdgpu_bl0/brightness | awk '{print $1 + 10}' > /sys/class/backlight/amdgpu_bl0/brightness
+bind = $mod SHIFT, N, exec, cat /sys/class/backlight/amdgpu_bl0/brightness | awk '{print $1 - 10}' > /sys/class/backlight/amdgpu_bl0/brightness
+bind = $mod CTRL, R, exec, ddcutil setvcp 10 + 5
+bind = $mod CTRL, N, exec, ddcutil setvcp 10 - 5
+bind = $mod CTRL SHIFT, R, exec, ddcutil setvcp 12 + 5
+bind = $mod CTRL SHIFT, N, exec, ddcutil setvcp 12 - 5
 
 bind = $mod, F, fullscreen
 bind = $mod, Q, killactive
-bind = $mod SHIFT, Q, exec, hyprctl dispatch exit
 
 bind = $mod, H, movefocus, l
 bind = $mod, J, movefocus, d
