--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,11 +1,11 @@
-monitor = DP-1, 3840x2160, 0x0, 1.8
+monitor = DP-1, 3840x2160, 0x0, 1.875
 monitor = eDP-1, disable#1920x1200, 0x0, 1.3
 
 exec-once = pipewire
 exec-once = fcitx5
 exec-once = wl-paste -t text -w clipman store --no-persist
 exec-once = tail -f ~/.local/share/wobpipe | wob
-# exec-once = swayidle timeout 300 'pactl set-sink-volume @DEFAULT_SINK@ 0% ; waylock -fork-on-lock ; hyprctl dispatch dpms off'
+# exec-once = swayidle timeout 300 'pamixer --set-volume 0 ; waylock -fork-on-lock ; hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 
 general {
     gaps_out = 0
@@ -23,7 +23,7 @@ input {
 }
 
 animations {
-    enabled = no
+    #enabled = no
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 2, myBezier
     animation = windowsOut, 1, 2, default, slide
@@ -46,18 +46,18 @@ $mod = SUPER
 
 bind = $mod, RETURN, exec, wezterm
 bind = $mod, B, exec, firefox
-# bind = $mod, SPACE, exec, wofi --show run
+bind = $mod, SPACE, exec, wofi --show run
 bind = $mod, V, exec, clipman pick -t wofi
 bind = $mod, S, exec, grimshot save area ~/pictures/screenshots/$(date "+%Y-%m-%d_%H:%M:%S")'.png'
 bind = $mod, C, exec, hyprpicker -a
-bind = $mod, W, exec, pactl set-sink-volume @DEFAULT_SINK@ 0% ; waylock -fork-on-lock ; hyprctl dispatch dpms off
+bind = $mod, W, exec, pamixer --set-volume 0 ; waylock -fork-on-lock
 bind = $mod, M, exec, makoctl dismiss
 bind = $mod SHIFT, M, exec, makoctl invoke
 bind = $mod SHIFT, B, exec, cat /sys/class/power_supply/BAT0/capacity > ~/.local/share/wobpipe
 
-bind = $mod, R, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% ; pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > ~/.local/share/wobpipe
-bind = $mod, N, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% ; pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > ~/.local/share/wobpipe
-bind = $mod, P, exec, pactl set-sink-volume @DEFAULT_SINK@ 0% ; pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > ~/.local/share/wobpipe
+bind = $mod, R, exec, pamixer -i 5 ; pamixer --get-volume > ~/.local/share/wobpipe
+bind = $mod, N, exec, pamixer -d 5 ; pamixer --get-volume > ~/.local/share/wobpipe
+bind = $mod, P, exec, pamixer --set-volume 0 ; echo 0 > ~/.local/share/wobpipe
 bind = $mod SHIFT, R, exec, cat /sys/class/backlight/amdgpu_bl0/brightness | awk '{print $1 + 10}' > /sys/class/backlight/amdgpu_bl0/brightness
 bind = $mod SHIFT, N, exec, cat /sys/class/backlight/amdgpu_bl0/brightness | awk '{print $1 - 10}' > /sys/class/backlight/amdgpu_bl0/brightness
 bind = $mod CTRL, R, exec, ddcutil setvcp 10 + 5
