--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,7 +23,7 @@ input {
 }
 
 animations {
-    #enabled = no
+    enabled = no
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 2, myBezier
     animation = windowsOut, 1, 2, default, slide
@@ -85,3 +85,9 @@ bind = CTRL SHIFT, H, workspace, -1
 bind = CTRL SHIFT, L, workspace, +1
 bind = $mod CTRL SHIFT, H, movetoworkspace, -1
 bind = $mod CTRL SHIFT, L, movetoworkspace, +1
+bind = $mod, 1, workspace, 1
+bind = $mod, 2, workspace, 2
+bind = $mod, 3, workspace, 3
+bind = $mod, 4, workspace, 4
+bind = $mod, 5, workspace, 5
+bind = $mod, 6, workspace, 6
