--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,5 +1,8 @@
 font=monospace:size=12
 
+[colors]
+alpha=0.88
+
 [key-bindings]
 scrollback-up-half-page=Control+Shift+u
 scrollback-down-half-page=Control+Shift+d
