--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,16 +1,20 @@
 monitor = DP-1, 3840x2160, 0x0, 1.875
 monitor = eDP-1, disable#1920x1200, 0x0, 1.3
 
-exec-once = pipewire
+exec-once = foot --server
+exec-once = mako
 exec-once = fcitx5
+exec-once = pipewire
 exec-once = wl-paste -t text -w clipman store --no-persist
 exec-once = tail -f ~/.local/share/wobpipe | wob
-# exec-once = swayidle timeout 300 'pamixer --set-volume 0 ; waylock -fork-on-lock ; hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+exec-once = swayidle timeout 300 "pamixer --set-volume 0 ; waylock -fork-on-lock ; wlopm --off eDP-1 ; wlopm --off DP-1 ; zzz" resume "wlopm --on eDP-1 ; wlopm --on DP-1" &
+exec-once = wlsunset -o DP-1 -S 04:30 -s 18:00 -t 0 -T 6500 -d 1800 -g 1 &
+exec-once = wbg ~/pictures/others/wallpaper/pxfuel.jpg
 
 general {
-    gaps_out = 0
-    gaps_in = 0
-    border_size = 0
+    gaps_out = 8
+    gaps_in = 4
+    border_size = 2
     col.active_border = rgba(66aaccbb)
     col.inactive_border = rgba(555555aa)
 }
@@ -23,12 +27,12 @@ input {
 }
 
 animations {
-    enabled = no
+    enabled = yes
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 2, myBezier
-    animation = windowsOut, 1, 2, default, slide
-    animation = fade, 1, 1, default
-    animation = workspaces, 1, 1.4, default
+    animation = windows, 1, 3, myBezier
+    animation = windowsOut, 1, 3, default, slide
+    animation = fade, 1, 3, default
+    animation = workspaces, 1, 1.8, default
 }
 
 misc {
@@ -44,9 +48,10 @@ debug {
 
 $mod = SUPER
 
-bind = $mod, RETURN, exec, wezterm
+bind = $mod, RETURN, exec, footclient
+bind = $mod CTRL, RETURN, exec, wezterm
 bind = $mod, B, exec, firefox
-bind = $mod, SPACE, exec, wofi --show run
+bind = $mod, A, exec, wofi --show run
 bind = $mod, V, exec, clipman pick -t wofi
 bind = $mod, S, exec, grimshot save area ~/pictures/screenshots/$(date "+%Y-%m-%d_%H:%M:%S")'.png'
 bind = $mod, C, exec, hyprpicker -a
